# eq_plug

./: .gitignore  Cargo.toml  README.md  bundler.toml
.cargo/: config.toml
gui/: next.config.ts  package.json  webview.d.ts
gui/app/: layout.tsx  page.tsx
gui/bindings/: DrawData.ts  DrawRequest.ts  InitResponse.ts  Message.ts  ParameterUpdate.ts
gui/components/: Canvas.tsx  Resize.tsx  Spectrum.tsx
gui/components/Equalizer/: Equalizer.tsx  ruler.ts  spectrum.ts
gui/components/Equalizer/controls/: Control.tsx  ControlNode.tsx  EqControls.tsx
gui/components/Equalizer/freq_response/: FrequencyResponse.tsx
gui/components/Equalizer/ruler/: RulerCanvas.tsx  ruler.ts
gui/components/spectrum/: Spectrum.tsx  draw.ts  ruler.ts
gui/lib/: conversion.ts  curve_func.ts  index.ts  parameters.ts  range.ts  utils.ts
src/: lib.rs  params.rs  util.rs
src/dsp/: eq.rs  mod.rs  nodes.rs  param_node.rs
src/editor/: component.rs  ipc.rs  mod.rs  util.rs
src/editor/freq_response/: config.rs  mod.rs
src/editor/spectrum_analyzer/: config.rs  mod.rs  monitor.rs  processing.rs
